# Telewavesim

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST  README.md  api.html  elast.html  genindex.html  index.html  links.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tws_env.yml  utils.html  wiggles.html
.github/: test_conda_env.yml
.github/workflows/: tests.yml
.travis/: github_deploy_key.enc
_build/doctrees/: api.doctree  elast.doctree  environment.pickle  index.doctree  utils.doctree  wiggles.doctree
_build/html/: api.html  genindex.html  search.html  searchindex.js  utils.html  wiggles.html
_build/html/_sources/: api.rst.txt
_sources/: index.rst.txt
docs/: .buildinfo  api.html  api.rst  conf.html  conf.py  doc.html  elast.html  genindex.html  index.html  index.rst  links.rst  objects.inv  py-modindex.html  rmat_f.html  search.html  searchindex.js  utils.html  wiggles.html
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_sources/: conf.rst.txt  doc.rst.txt  elast.rst.txt  index.rst.txt  rmat_f.rst.txt  utils.rst.txt  wiggles.rst.txt
examples/: 0-Start-Here.ipynb  model_Brownlee2017.txt  sim_Prf_Porter2011.py  sim_Prf_Porter2011_for.py  sim_SKS.py  sim_SKS_for.py  sim_Srf_Porter2011.py  sim_Srf_Porter2011_for.py  sim_obs_Audet2016.py  sim_obs_Audet2016_for.py
examples/.ipynb_checkpoints/: 0-Start-Here-checkpoint.ipynb  Untitled-checkpoint.ipynb
examples/Notebooks/: sim_Prfs_Porter2011.ipynb  sim_SKS.ipynb  sim_obs_Audet2016.ipynb
examples/Notebooks/.ipynb_checkpoints/: sim_obs_Audet2016-checkpoint.ipynb
examples/Notebooks/Fortran/: sim_SKS_for.ipynb  sim_obs_Audet2016_for.ipynb
examples/Notebooks/Fortran/.ipynb_checkpoints/: sim_Prfs_Porter2011_for-checkpoint.ipynb  sim_obs_Audet2016_for-checkpoint.ipynb
examples/Notebooks/Python/: sim_Prfs_Porter2011.ipynb  sim_SKS.ipynb  sim_obs_Audet2016.ipynb
examples/Notebooks/Python/.ipynb_checkpoints/: sim_Prfs_Porter2011-checkpoint.ipynb  sim_SKS-checkpoint.ipynb
paper/: paper.bib  paper.md
src/: rmat.f90  rmat_sub.f90
src/telewavesim/: doc.py  rmat.f90  wiggle.py
src/telewavesim/examples/: 0-Start-Here.ipynb
src/telewavesim/examples/models/: model_SKS.txt
telewavesim/: __init__.py  conf.py  doc.py  elast.py  green.py  plane.py  rmatrix.py  rtfluid.py  utils.py  wiggle.py
telewavesim/examples/Notebooks/: sim_Prfs_Porter2011.ipynb  sim_SKS.ipynb  sim_obs_Audet2016.ipynb
telewavesim/examples/models/: model_Audet2016.txt  model_Porter2011.txt
telewavesim/tests/: conftest.py  test_0_imports.py  test_notebooks.py  test_routines.py  test_utils.py
tests/: conftest.py  test_model_Audet2016.txt  test_model_Porter2011.txt  test_model_SKS.txt  test_notebooks.py  test_routines.py  test_utils.py
